<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_medium_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background_color"

    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_add_contact_iv_illustration"
        android:layout_width="186dp"
        android:layout_height="174dp"
        android:background="@drawable/create_contact_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_add_contact_til_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_contact_iv_illustration"
        android:hint="@string/fragment_add_contact_first_name"
        style="@style/TextInputLayout"
        app:endIconDrawable="@drawable/ic_baseline_person_outline_24"
        app:endIconMode="custom"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_add_contact_tid_first_name"
            style="@style/TextInputEditText"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_add_contact_til_last_name"
        android:hint="@string/fragment_add_contact_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_contact_til_first_name"
        android:layout_marginTop="@dimen/common_small_margin"
        style="@style/TextInputLayout"
        app:endIconDrawable="@drawable/ic_baseline_person_outline_24"
        app:endIconMode="custom"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_add_contact_tid_last_name"
            style="@style/TextInputEditText"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_add_contact_til_phone"
        android:hint="@string/fragment_add_contact_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_contact_til_last_name"
        android:layout_marginTop="@dimen/common_small_margin"
        style="@style/TextInputLayout"
        app:endIconDrawable="@drawable/ic_baseline_phone_24"
        app:endIconMode="custom"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_add_contact_tid_phone"
            style="@style/TextInputEditText"
            android:inputType="phone"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_add_contact_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_add_contact_btn_cancel"
        android:hint="@string/fragment_add_contact_btn_create_contact"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/primary_color"
        />

    <Button
        android:id="@+id/fragment_add_contact_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/fragment_add_contact_btn_cancel"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/error_or_delete"
        />

    <ProgressBar
        android:id="@+id/fragment_add_contact_pb_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/primary_color"

        />

</androidx.constraintlayout.widget.ConstraintLayout>

