<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:background="?attr/selectableItemBackground"
    android:paddingBottom="@dimen/common_small_margin"
    android:paddingTop="@dimen/common_small_margin"
>

    <TextView
        android:id="@+id/holder_row_contact_tv_new_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/primary_color"
        android:textStyle="bold"/>


    <ImageView
        android:id="@+id/holder_row_contact_iv_circle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/holder_row_contact_tv_new_letter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/common_large_margin"
        />

    <TextView
        android:id="@+id/holder_row_contact_tv_first_name"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_medium_margin"
        android:text="@string/fragment_add_contact_first_name"
        app:layout_constraintBottom_toTopOf="@id/holder_row_contact_tv_phone"
        app:layout_constraintStart_toEndOf="@id/holder_row_contact_iv_circle"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/holder_row_contact_tv_last_name"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_add_contact_last_name"
        app:layout_constraintBottom_toTopOf="@id/holder_row_contact_tv_phone"
        app:layout_constraintStart_toEndOf="@id/holder_row_contact_tv_first_name"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/common_small_margin"
        />

    <TextView
        android:id="@+id/holder_row_contact_tv_phone"
        style="@style/TextAppearance.RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_medium_margin"
        android:text="@string/fragment_add_contact_phone"
        app:layout_constraintStart_toEndOf="@id/holder_row_contact_iv_circle"
        app:layout_constraintTop_toBottomOf="@id/holder_row_contact_tv_first_name"
        />

</androidx.constraintlayout.widget.ConstraintLayout>